# VanRouteBackDjango

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
vanroute/: admin.py  apps.py  utils.py  views.py
vanroute/migrations/: 0001_initial.py  0002_rename_enderecos_endereco_and_more.py
vanroute/models/: __init__.py  alunos.py  enderecos.py  motoristas.py  vans.py
vanroute/serializers/: __init__.py  alunos.py  enderecos.py  motoristas.py  vans.py
vanroute/views/: __init__.py  alunos.py  enderecos.py  motoristas.py  optimize_route.py  vans.py
